# positronic-bond-engine

./: .gitignore  ETHICS.md  LICENSE  README.md  harness_current.txt  harness_latest.txt  harness_post_tune.txt  harness_run2.txt  harness_summary.txt  harness_tuned.txt  pyproject.toml  test_limited_data.py
auditing/: __init__.py  queued_audit.py  self_audit.py
core/: __init__.py  development_context.py  enjoyment_score.py  ethics_engine.py  exploratory_questioning.py  interaction_memory.py  observation_candidates.py  ontology.py  per_user_baseline.py  relationship_health.py  response_generator.py  truth_confidence.py  truth_telling_readiness.py
deployment/: __init__.py  config.py
docs/: guidelines.md  principles.md  vision.md
evaluation/: eval_co_evolution.py  eval_harness.py
examples/: __init__.py  basic_companion_stub.py  minimal_companion.py
integrations/: __init__.py  openclaw.py
memory/: __init__.py  store.py
persistence/: __init__.py  json_backend.py  local_persistence.py  models.py  paths.py  privacy.py  stores.py
sensors/: __init__.py  base.py
tests/: README.md  __init__.py  test_bond_decision_persistence.py  test_deliberation_v2.py  test_dual_deliberation.py  test_ethics_engine_integration.py  test_exploratory_questioning.py  test_harm_prevention.py  test_interaction_memory_integration.py  test_per_user_baseline.py  test_persistence.py  test_relationship_health_integration.py  test_response_e2e_live.py  test_response_enjoyment_bias.py  test_response_generator_gated.py
