[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "positronic-bond-engine"
version = "0.1.0"
description = "Conscience-first ethical governance layer for AI companions and in-home robotics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Positronic Bond Engine Contributors"}
]
keywords = [
    "ethics",
    "ai-governance",
    "robotics",
    "companionship",
    "self-audit",
    "conscience",
    "relationship-health"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/example/positronic-bond-engine"
Documentation = "https://github.com/example/positronic-bond-engine/blob/main/docs/"
Repository = "https://github.com/example/positronic-bond-engine"

[tool.hatch.build.targets.wheel]
packages = ["core", "auditing", "memory", "sensors", "integrations", "deployment"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
